--- a/css/login.css
+++ b/css/login.css
@@ -136,6 +136,9 @@ input:focus {
     font-size: 1.3rem;
     border: 0;
     transition: .1s;
+
+    text-decoration: none;
+    text-align: center;
 }
 
 .btn-custom:hover {
@@ -226,6 +229,38 @@ input:focus {
 .item-social img {
     height: auto;
     width: 90%;
+}
+
+.sign-up-success {
+    height: 45vh;
+    display: flex;
+    gap: 1.5rem;
+    flex-direction: column;
+}
+
+.icon-success {
+    font-size: 4rem;
+    color: green;
+}
+
+.alert-success {
+    padding: 2rem;
+    /* background-color: green; */
+    border-radius: 1.3rem;
+    border: 2px solid green;
+    color: green;
+    font-weight: 500;
+    font-size: 1.3rem;
+
+    display: flex;
+    gap: 1.4rem;
+    flex-direction: column;
+    align-items: center;
+
+    box-shadow: rgba(0, 128, 0, 0.2) 0px 8px 24px;
+
+
+    animation: 1s pulse;
 }
 
 
