--- a/css/global.css
+++ b/css/global.css
@@ -122,3 +122,25 @@
       transform: scaleX(1);
     }
   }
+
+  /* _______________________________________________ */
+
+  .link > a {
+	border: 1px solid #1B31BA;
+	padding: 0.2rem 0.5rem;
+	border-radius: 0.6rem;
+	font-size: 1rem;
+	text-decoration: none;
+	color: #1B31BA;
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+	transition: .3s;
+  }
+
+  .link > a:hover {
+	border-color: #7e8ffa;
+	color: #7e8ffa;
+	transform: scale(1.04);
+  }
