--- a/css/login.css
+++ b/css/login.css
@@ -125,6 +125,27 @@ input:focus {
 #link {
     text-decoration: none;
     color: gray;
+    padding-bottom: 2px;
+    position: relative;
+}
+
+#link:hover {
+    color: #000000;
+}
+
+#link::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    border-bottom: 1px solid gray;
+    transition: .3s;
+}
+
+#link:hover::after {
+    width: 100%;
 }
 
 .btn-custom {
@@ -139,6 +160,7 @@ input:focus {
 
     text-decoration: none;
     text-align: center;
+    margin-top: 0.5rem;
 }
 
 .btn-custom:hover {
@@ -151,6 +173,10 @@ input:focus {
     text-align: center;
     font-size: 1.2rem;
     margin-block: 0.7rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.7rem;
 }
 
 .img-login {
@@ -222,8 +248,8 @@ input:focus {
 }
 
 .box-social > .item-social:hover {
-    transform: scale(1.5);
-    background-color: rgba(0,0,0, 0.2);
+    transform: scale(1.25);
+    background-color: rgba(0,0,0, 0.1);
 }
 
 .item-social img {
